Basic functionality for project interface

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
             here goes some info
         </div>
         <div class="sidebar">
-    
+            <button class="addProject">new</button>
         </div>
         <div class="content">
             <div class="todos">
             </div>
-            <button class="add">new</button>
+            <button class="addCard">new</button>
         </div>
     </div>
 </body>
