switch between project
form doesn't remove properly when card(task) created

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="content">
             <div class="todos">
             </div>
-            <button class="addCard">new</button>
+            <button class="addCard">New Task</button>
         </div>
     </div>
 </body>
