--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            here goes some info
+            To Do Projects
         </div>
         <div class="sidebar">
-            <button class="addProject">new</button>
+            <div class="sidebar projects">
+            </div>
+            <button class="addProject">Add Project</button>
         </div>
         <div class="content">
             <div class="todos">
