minor css changes

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             To Do Projects
         </div>
         <div class="sidebar">
-            <div class="sidebar projects">
+            <div class="projects">
             </div>
             <button class="addProject">Add Project</button>
         </div>
