Added cancel button to project form
also did minor style changes

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
         <div class="content">
             <div class="todos">
             </div>
-            <button class="addCard">New Task</button>
+            <button class="addCard">
+                <img class="addCard" src="<%=require('./plus-line-icon.svg')%>">
+                New Task</button>
         </div>
     </div>
 </body>
