rendered card style changes

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
             </div>
             <button class="addCard">
                 <img class="addCard" src="<%=require('./plus-line-icon.svg')%>">
-                New Task</button>
+                <span class="addCard">New Task</span>
+            </button>
         </div>
     </div>
 </body>
