html out of source welcome card to index.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="todos">
             </div>
             <button class="addCard">
-                <img class="addCard" src="<%=require('../public/images/plus-line-icon.svg')%>">
+                <img class="addCard" src="<%=require('./public/images/plus-line-icon.svg')%>">
                 <span class="addCard">New Task</span>
             </button>
         </div>
